[gd_scene load_steps=13 format=3 uid="uid://cf8an3y3kq6m3"]

[ext_resource type="Script" path="res://scripts/level_2.gd" id="1_gihkk"]
[ext_resource type="Texture2D" uid="uid://cax1s3vm8idlb" path="res://assets/art/tilesets/plains.png" id="2_sl4wi"]
[ext_resource type="Texture2D" uid="uid://ce230qyugsh85" path="res://assets/art/tilesets/grass.png" id="3_rxh5n"]
[ext_resource type="Texture2D" uid="uid://dgg0oj3muujej" path="res://assets/art/objects/objects.png" id="4_mxik1"]
[ext_resource type="PackedScene" uid="uid://v4hrjcqkel1b" path="res://scenes/player.tscn" id="5_rb77t"]
[ext_resource type="PackedScene" uid="uid://coegvqdmc5s6" path="res://scenes/enemy.tscn" id="6_3ows4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1kkte"]
texture = ExtResource("2_sl4wi")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
1:1/0 = 0
2:1/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:0/0 = 0
1:4/0 = 0
1:5/0 = 0
2:5/0 = 0
2:6/0 = 0
3:6/0 = 0
3:5/0 = 0
3:4/0 = 0
2:4/0 = 0
1:6/0 = 0
4:4/0 = 0
4:5/0 = 0
4:6/0 = 0
5:6/0 = 0
5:5/0 = 0
5:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hca0e"]
texture = ExtResource("3_rxh5n")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ihm4l"]
texture = ExtResource("4_mxik1")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.87782, 2.91682, 5.87782, 2.91682, 1.81196, 4.86136, -1.81196, 4.86136)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.8125, -2.75, 0.6875, -0.375, 6.8125, -1.875, 6.4375, 3.375, 3.1875, 6.625, -1.1875, 6.875, -6.8125, 3.875, -8, 0.25)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.11526, 0.972272, 7.02687, 1.06066, 6.93849, 6.01041, -7.20365, 5.92202)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1875, 25.875, -11.6875, 22.5, -11.9375, 18.875, -11.6875, 15.125, -9.6875, 13.25, 7.4375, 12.25, 11.8125, 18.5, 11.9375, 21.5, 9.8125, 25.75)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.8125, 14.75, -11.8125, 13.25, -15.5625, 10.25, -15.8125, 6.875, 15.5625, 6.125, 15.6875, 8.75, 10.3125, 13.625, 0.0625, 14.875)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.8125, 18, -5.78944, 20.5945, -1.8125, 21.875, 1.63519, 21.8319, 5.96622, 20.7713, 5.87783, 18.2964, -0.4375, 16.625)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.5625, -8, 5.5625, -8, 11.6875, 1.375, 11.5625, 4.5, 9.4375, 9, -6.8125, 9, -11.9375, 5.625, -12.3125, -1.875)

[sub_resource type="TileSet" id="TileSet_cv0uu"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_1kkte")
sources/1 = SubResource("TileSetAtlasSource_hca0e")
sources/2 = SubResource("TileSetAtlasSource_ihm4l")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_he1uk"]
size = Vector2(14.5, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pqep"]
size = Vector2(25, 21)

[node name="Level2" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_gihkk")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_cv0uu")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(327680, 131072, 1, 262144, 131072, 0, 393216, 131072, 2, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 131072, 0, 327681, 131072, 1, 393217, 131072, 2, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 65536, 0, 196610, 65536, 1, 262146, 327680, 1, 327682, 262144, 0, 393218, 196608, 2, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 786434, 1, 0, 851970, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 131072, 0, 196611, 131072, 1, 262147, 262144, 0, 327683, 196608, 2, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 131072, 0, 196612, 131072, 1, 262148, 131072, 2, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 1, 0, 589828, 1, 0, 655364, 1, 0, 720900, 1, 0, 786436, 1, 0, 851972, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 131072, 0, 196613, 131072, 1, 262149, 131072, 2, 327685, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 851973, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 196608, 0, 196614, 262144, 1, 262150, 327680, 0, 327686, 65536, 2, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 589830, 1, 0, 655366, 1, 0, 720902, 1, 0, 786438, 1, 0, 851974, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 131072, 0, 262151, 131072, 1, 327687, 327680, 0, 393223, 65536, 2, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 196608, 0, 262152, 262144, 1, 327688, 131072, 1, 393224, 327680, 0, 458760, 65536, 2, 524296, 1, 0, 589832, 1, 0, 655368, 1, 0, 720904, 1, 0, 786440, 1, 0, 851976, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 196608, 0, 327689, 262144, 1, 393225, 131072, 1, 458761, 327680, 0, 524297, 65536, 2, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 786441, 1, 0, 851977, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 196608, 0, 393226, 262144, 1, 458762, 131072, 1, 524298, 131072, 2, 589834, 1, 0, 655370, 1, 0, 720906, 1, 0, 786442, 1, 0, 851978, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 131072, 0, 458763, 131072, 1, 524299, 131072, 2, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 786443, 1, 0, 851979, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 131072, 0, 458764, 131072, 1, 524300, 131072, 2, 589836, 1, 0, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 851980, 1, 0, 13, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 393229, 131072, 0, 458765, 131072, 1, 524301, 131072, 2, 589837, 1, 0, 655373, 1, 0, 720909, 1, 0, 786445, 1, 0, 851981, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 131072, 0, 458766, 131072, 1, 524302, 131072, 2, 589838, 1, 0, 655374, 1, 0, 720910, 1, 0, 786446, 1, 0, 851982, 1, 0, 15, 1, 0, 65551, 1, 0, 131087, 1, 0, 196623, 1, 0, 262159, 1, 0, 327695, 1, 0, 393231, 131072, 0, 458767, 131072, 1, 524303, 131072, 2, 589839, 1, 0, 655375, 1, 0, 720911, 1, 0, 786447, 1, 0, 851983, 1, 0, 16, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 1, 0, 327696, 1, 0, 393232, 131072, 0, 458768, 131072, 1, 524304, 131072, 2, 589840, 1, 0, 655376, 1, 0, 720912, 1, 0, 786448, 1, 0, 851984, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 1, 0, 327697, 1, 0, 393233, 131072, 0, 458769, 131072, 1, 524305, 131072, 2, 589841, 1, 0, 655377, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 131072, 0, 458770, 131072, 1, 524306, 131072, 2, 589842, 1, 0, 655378, 1, 0, 720914, 1, 0, 786450, 1, 0, 851986, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 131072, 0, 458771, 131072, 1, 524307, 131072, 2, 589843, 1, 0, 655379, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 65536, 0, 393236, 327680, 1, 458772, 131072, 1, 524308, 131072, 2, 589844, 1, 0, 655380, 1, 0, 720916, 1, 0, 786452, 1, 0, 851988, 1, 0, 21, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 65536, 0, 327701, 327680, 1, 393237, 131072, 1, 458773, 262144, 0, 524309, 196608, 2, 589845, 1, 0, 655381, 1, 0, 720917, 1, 0, 786453, 1, 0, 851989, 1, 0, 22, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 131072, 0, 327702, 131072, 1, 393238, 262144, 0, 458774, 196608, 2, 524310, 1, 0, 589846, 1, 0, 655382, 1, 0, 720918, 1, 0, 786454, 1, 0, 851990, 1, 0, 23, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 131072, 0, 327703, 131072, 1, 393239, 131072, 2, 458775, 1, 0, 524311, 1, 0, 589847, 1, 0, 655383, 1, 0, 720919, 1, 0, 786455, 1, 0, 851991, 1, 0, 24, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 131072, 0, 327704, 131072, 1, 393240, 131072, 2, 458776, 1, 0, 524312, 1, 0, 589848, 1, 0, 655384, 1, 0, 720920, 1, 0, 786456, 1, 0, 851992, 1, 0, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 131072, 0, 327705, 131072, 1, 393241, 131072, 2, 458777, 1, 0, 524313, 1, 0, 589849, 1, 0, 655385, 1, 0, 720921, 1, 0, 786457, 1, 0, 851993, 1, 0, 26, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 131072, 0, 327706, 131072, 1, 393242, 131072, 2, 458778, 1, 0, 524314, 1, 0, 589850, 1, 0, 655386, 1, 0, 720922, 1, 0, 786458, 1, 0, 851994, 1, 0, 27, 1, 0, 65563, 1, 0, 131099, 1, 0, 196635, 1, 0, 262171, 131072, 0, 327707, 131072, 1, 393243, 131072, 2, 458779, 1, 0, 524315, 1, 0, 589851, 1, 0, 655387, 1, 0, 720923, 1, 0, 786459, 1, 0, 851995, 1, 0, 28, 1, 0, 65564, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 131072, 0, 327708, 131072, 1, 393244, 131072, 2, 458780, 1, 0, 524316, 1, 0, 589852, 1, 0, 655388, 1, 0, 720924, 1, 0, 786460, 1, 0, 851996, 1, 0, 29, 1, 0, 65565, 1, 0, 131101, 1, 0, 196637, 1, 0, 262173, 131072, 0, 327709, 131072, 1, 393245, 131072, 2, 458781, 1, 0, 524317, 1, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 786461, 1, 0, 851997, 1, 0, 30, 1, 0, 65566, 1, 0, 131102, 1, 0, 196638, 1, 0, 262174, 131072, 0, 327710, 131072, 1, 393246, 131072, 2, 458782, 1, 0, 524318, 1, 0, 589854, 1, 0, 655390, 1, 0, 720926, 1, 0, 786462, 1, 0, 851998, 1, 0, 31, 1, 0, 65567, 1, 0, 131103, 1, 0, 196639, 1, 0, 262175, 131072, 0, 327711, 131072, 1, 393247, 131072, 2, 458783, 1, 0, 524319, 1, 0, 589855, 1, 0, 655391, 1, 0, 720927, 1, 0, 786463, 1, 0, 851999, 1, 0)
layer_1/name = "cliff"
layer_1/tile_data = PackedInt32Array(19, 196608, 5, 65555, 196608, 5, 131091, 196608, 5, 196627, 196608, 5, 11, 65536, 5, 65547, 65536, 5, 131083, 65536, 5, 196619, 65536, 5, 262155, 65536, 6, 262163, 196608, 6, 262156, 131072, 6, 262157, 131072, 6, 262158, 131072, 6, 262159, 131072, 6, 262160, 131072, 6, 262161, 131072, 6, 262162, 131072, 6, 12, 131072, 5, 13, 131072, 5, 14, 131072, 5, 15, 131072, 5, 16, 131072, 5, 17, 131072, 5, 18, 131072, 5, 65554, 131072, 5, 65553, 131072, 5, 65552, 131072, 5, 65551, 131072, 5, 65550, 131072, 5, 65549, 131072, 5, 65548, 131072, 5, 131084, 131072, 5, 131085, 131072, 5, 131086, 131072, 5, 131087, 131072, 5, 131088, 131072, 5, 131089, 131072, 5, 131090, 131072, 5, 196626, 131072, 5, 196625, 131072, 5, 196624, 131072, 5, 196623, 131072, 5, 196622, 131072, 5, 196621, 131072, 5, 196620, 131072, 5, 458783, 196608, 4, 458782, 131072, 4, 458781, 131072, 4, 458780, 131072, 4, 458779, 131072, 4, 458778, 131072, 4, 458777, 65536, 4, 524313, 65536, 6, 524319, 196608, 5, 589855, 196608, 5, 655391, 196608, 5, 720927, 196608, 5, 720926, 131072, 5, 786462, 131072, 5, 786463, 196608, 5, 851999, 196608, 5, 524314, 327680, 4, 589850, 65536, 5, 655386, 327680, 5, 720922, 131072, 5, 786458, 131072, 5, 851994, 131072, 5, 524315, 131072, 5, 524316, 131072, 5, 524317, 131072, 5, 589853, 131072, 5, 589854, 131072, 5, 655390, 131072, 5, 524318, 131072, 5, 655389, 131072, 5, 720925, 131072, 5, 786461, 131072, 5, 655388, 131072, 5, 655387, 131072, 5, 589851, 131072, 5, 589852, 131072, 5, 720923, 131072, 5, 786459, 131072, 5, 851995, 131072, 5, 786460, 131072, 5, 720924, 131072, 5, 851996, 131072, 5, 851997, 131072, 5, 851998, 131072, 5, 655385, 65536, 4, 720920, 65536, 4, 786456, 65536, 5, 851992, 65536, 5, 720921, 327680, 5, 786457, 131072, 5, 851993, 131072, 5)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(30, 2, 5, 786454, 2, 5, 524293, 2, 5, 786433, 2, 5, 720908, 2, 5, 65553, 2, 5, 786437, 524290, 6, 589832, 524290, 6, 458754, 524290, 6, 65546, 524290, 6, 65538, 524290, 6, 196631, 524290, 6, 65562, 524290, 6, 786441, 2, 1, 720912, 2, 1, 786449, 2, 1, 851987, 2, 1, 589844, 2, 1, 589848, 2, 1, 131093, 2, 1, 196636, 2, 1, 65541, 2, 1, 131086, 2, 1, 262154, 2, 1, 13, 655362, 7, 65560, 655362, 7, 720915, 655362, 7, 589852, 393218, 7, 720925, 393218, 7, 786459, 393218, 7, 65544, 393218, 7)

[node name="player" parent="." instance=ExtResource("5_rb77t")]
position = Vector2(15, 92)

[node name="enemy" parent="." instance=ExtResource("6_3ows4")]
position = Vector2(160, 115)

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(0, 0, 178, 0, 178, 74, 180, 76, 181, 77, 184, 79, 314, 79, 316, 78, 318, 77, 319, 74, 319, 0, 345, 0, 345, -21, 370, -21, 370, 0, 512, 0, 512, 69, 528, 69, 528, 107, 512, 107, 512, 116, 409, 115, 407, 118, 405, 121, 403, 124, 403, 138, 405, 141, 408, 143, 418, 143, 418, 162, 409, 164, 404, 171, 403, 178, 392, 180, 387, 188, 387, 224, 0, 224, 0, 107, -14, 107, -14, 70, 0, 70, -1, 0, -4, -2, -4, 66, -20, 66, -20, 109, -2, 109, -2, 225, 513, 226, 514, 110, 530, 110, 530, 66, 514, 66, 514, -3, 372, -3, 372, -24, 343, -24, 343, -3, -2, -3)

[node name="level_1_entry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_1_entry"]
position = Vector2(-7.25, 88.5)
shape = SubResource("RectangleShape2D_he1uk")

[node name="heal_entry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="heal_entry"]
position = Vector2(357.5, -10.5)
shape = SubResource("RectangleShape2D_8pqep")

[connection signal="body_entered" from="level_1_entry" to="." method="_on_level_1_entry_body_entered"]
[connection signal="body_exited" from="level_1_entry" to="." method="_on_level_1_entry_body_exited"]
[connection signal="body_entered" from="heal_entry" to="." method="_on_heal_entry_body_entered"]
[connection signal="body_exited" from="heal_entry" to="." method="_on_heal_entry_body_exited"]
